--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     
     <!-- Performance Hints -->
+    <link rel="preload" href="%PUBLIC_URL%/carpet1.jpg" as="image" />
     <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
     <link rel="dns-prefetch" href="https://images.unsplash.com" />
     <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
