Fix SEO meta tags and add sitemap for Google indexing

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -65,10 +65,10 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.astrapest.com.au/" />
+    <meta property="og:url" content="https://www.astrapestcontrol.com.au/" />
     <meta property="og:title" content="Pest Control Brisbane & Gold Coast | Termite Inspection & Treatment | Astra Pest Control" />
     <meta property="og:description" content="Expert pest control & termite services in Brisbane, Gold Coast, Ipswich & Sunshine Coast. Licensed technicians, 15+ years experience. Same-day service available. Call 0450 955 420 for free quote!" />
-    <meta property="og:image" content="https://www.astrapest.com.au/logo.png" />
+    <meta property="og:image" content="https://www.astrapestcontrol.com.au/logo.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:site_name" content="Astra Pest Control" />
@@ -76,7 +76,7 @@
     
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:url" content="https://www.astrapest.com.au/" />
+    <meta name="twitter:url" content="https://www.astrapestcontrol.com.au/" />
     <meta name="twitter:title" content="Pest Control Brisbane & Gold Coast | Termite Control | Astra Pest Control" />
     <meta name="twitter:description" content="Brisbane & Gold Coast's #1 rated pest control service. 15+ years experience. Same-day service. Call 0450 955 420" />
     <meta name="twitter:image" content="https://www.astrapest.com.au/logo.png" />
