--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,7 +22,7 @@
     </script>
     
     <!-- Google Search Console Verification -->
-    <meta name="google-site-verification" content="YOUR_VERIFICATION_CODE" />
+    <meta name="google-site-verification" content="t9waY0WFesB3Y7mn58paxkr-sU_17eVgMDGF5LYMi6U" />
     
     <!-- Bing Webmaster Tools -->
     <meta name="msvalidate.01" content="YOUR_BING_VERIFICATION_CODE" />
