Critical performance optimizations: lazy loading, caching, preconnect

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,6 +7,11 @@
     <meta name="theme-color" content="#dc2626" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     
+    <!-- Critical Performance Optimizations -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+    <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin>
+    <link rel="dns-prefetch" href="//fonts.gstatic.com">
+    
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="/faviconlogo.png?v=3" />
     <link rel="icon" type="image/png" sizes="16x16" href="/faviconlogo.png?v=3" />
