--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,6 +12,17 @@
     <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin>
     <link rel="dns-prefetch" href="//fonts.gstatic.com">
     
+    <!-- Critical CSS to prevent FOUC -->
+    <style>
+      body{margin:0;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI','Roboto','Oxygen','Ubuntu','Cantarell','Fira Sans','Droid Sans','Helvetica Neue',sans-serif;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;background:#fff}
+      *{box-sizing:border-box}
+      .hero-modern{min-height:100vh;display:flex;align-items:center;position:relative;overflow:hidden;padding-top:80px;background:linear-gradient(135deg,rgba(15,23,42,0.85) 0%,rgba(30,41,59,0.80) 100%)}
+      .container{max-width:1200px;margin:0 auto;padding:0 20px}
+      .hero-text{max-width:900px;color:#fff}
+      .hero-heading{font-size:3.5rem;font-weight:700;line-height:1.1;margin:20px 0}
+      @media (max-width:768px){.hero-modern{min-height:80vh}.hero-heading{font-size:2.5rem}}
+    </style>
+    
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="/faviconlogo.png?v=3" />
     <link rel="icon" type="image/png" sizes="16x16" href="/faviconlogo.png?v=3" />
