--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en-AU">
   <head>
-    <!-- Cache buster: 2025-12-10-18:29 -->
+    <!-- Cache buster: 2025-12-10-19:13 -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
     <meta name="theme-color" content="#dc2626" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
     
     <!-- Critical Performance Optimizations -->
     <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
