Final fix: Add address to nested LocalBusiness in Service schema

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -277,7 +277,13 @@
       "serviceType": "Carpet Cleaning and Pest Control",
       "provider": {
         "@type": "LocalBusiness",
-        "name": "Astra Pest Control"
+        "name": "Astra Pest Control",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Brisbane",
+          "addressRegion": "QLD",
+          "addressCountry": "AU"
+        }
       },
       "areaServed": {
         "@type": "State",
