FORCE CACHE REFRESH: Updated timestamp and favicon version to clear Google cache

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-AU">
 <head>
+  <!-- CACHE REFRESH: 2025-12-11-05:56 -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <meta name="theme-color" content="#dc2626" />
@@ -134,8 +135,8 @@
   </style>
   
   <!-- Favicon -->
-  <link rel="icon" type="image/png" sizes="32x32" href="/faviconlogo.png?v=3" />
-  <link rel="shortcut icon" href="/faviconlogo.png?v=3" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/faviconlogo.png?v=4" />
+  <link rel="shortcut icon" href="/faviconlogo.png?v=4" />
   
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
