--- a/public/index.html
+++ b/public/index.html
@@ -138,7 +138,9 @@
     .hero-heading{font-size:3.5rem;font-weight:700;line-height:1.1;margin:20px 0}
     .btn-primary{background:#007bff;color:white;padding:12px 24px;text-decoration:none;border-radius:5px;display:inline-block;font-weight:500}
     .services-page{padding-top:150px}
-    @media (max-width:768px){.hero-modern{min-height:80vh}.hero-heading{font-size:2.5rem}.hero-services{min-height:50vh;padding:1rem 0}}
+    .video-placeholder{background:#000;min-height:300px;display:flex;align-items:center;justify-content:center;color:white;border-radius:8px}
+    .play-button-overlay{background:rgba(255,255,255,0.2);border-radius:50%;padding:20px;cursor:pointer}
+    @media (max-width:768px){.hero-modern{min-height:80vh}.hero-heading{font-size:2.5rem}.hero-services{min-height:50vh;padding:1rem 0}.video-placeholder{min-height:200px}}
   </style>
   
   <!-- Favicon -->
